# autocrop

./: .gitignore  README.md  autolevels.py  autorotate.py  image2json.py  json2png.py  json2visu.py  jsonclean.py  png2square.py  pyproject.toml
